--- a/html/bettingRecord.html
+++ b/html/bettingRecord.html
@@ -86,8 +86,8 @@
                             <p class="result">14.7</p>
                         </li>
                         <li class="btnBox">
-                            <button>
-                                オープン
+                            <button class="checkBtn">
+                                詳細を見る
                                 <i class="dbarrow_ic"></i>
                             </button>
                         </li>
@@ -113,8 +113,8 @@
                             <p class="result">14.7</p>
                         </li>
                         <li class="btnBox">
-                            <button>
-                                オープン
+                            <button class="checkBtn">
+                                詳細を見る
                                 <i class="dbarrow_ic"></i>
                             </button>
                         </li>
@@ -140,8 +140,8 @@
                             <p class="result">14.7</p>
                         </li>
                         <li class="btnBox">
-                            <button>
-                                オープン
+                            <button class="checkBtn">
+                                詳細を見る
                                 <i class="dbarrow_ic"></i>
                             </button>
                         </li>
@@ -172,38 +172,129 @@
     </footer>
     <!--彈窗-->
     <div class="filter">
-        <!--帳戶平台彈窗-->
-        <div class="jumpWindow accWindow">
-            <div class="title">
-                帳戶
+        <!--投注詳細-->
+        <div class="jumpWindow betRecord">
+            <div class="title sp">
+                <p>ベット履歷詳細</p>
+                <p class="smallTitle">IFUN GAMES</p>
                 <i class="close"></i>
             </div>
             <div class="content">
-                <div class="bigBox">
-                    <button class="active">全帳戶</button>
+                <div class="box">
+                    <p class="smallTitle">ゴールデンエジプト</p>
+                    <ul>
+                        <li>
+                            ベット時間
+                            <p>2022-08-16 10:28:48</p>
+                        </li>
+                        <li>
+                            ベット番号
+                            <p>11678681</p>
+                        </li>
+                        <li>
+                            ベット金額
+                            <p>¥10.50</p>
+                        </li>
+                        <li>
+                            有効ベット額
+                            <p>¥10.50</p>
+                        </li>
+                        <li>
+                            チップ
+                            <p>¥0.00</p>
+                        </li>
+                        <li>
+                            結果
+                            <p class="money">¥-10.50</p>
+                        </li>
+                    </ul>
                 </div>
-            </div>
-        </div>
-        <div class="jumpWindow platWindow">
-            <div class="title">
-                平台
-                <i class="close"></i>
-            </div>
-            <div class="content">
-                <div class="bigBox">
-                    <button class="active">全平台</button>
+                <div class="box">
+                    <p class="smallTitle">ゴールデンエジプト</p>
+                    <ul>
+                        <li>
+                            ベット時間
+                            <p>2022-08-16 10:28:48</p>
+                        </li>
+                        <li>
+                            ベット番号
+                            <p>11678681</p>
+                        </li>
+                        <li>
+                            ベット金額
+                            <p>¥10.50</p>
+                        </li>
+                        <li>
+                            有効ベット額
+                            <p>¥10.50</p>
+                        </li>
+                        <li>
+                            チップ
+                            <p>¥0.00</p>
+                        </li>
+                        <li>
+                            結果
+                            <p class="money">¥-10.50</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="smallBox">
-                    <button>BNG娛樂</button>
-                    <button>BNG娛樂</button>
-                    <button>BNG娛樂</button>
-                    <button>BNG娛樂</button>
-                    <button>BNG娛樂</button>
-                    <button>BNG娛樂</button>
-                    <button>BNG娛樂</button>
-                    <button>BNG娛樂</button>
-                    <button>BNG娛樂</button>
-                    <button>BNG娛樂</button>
+                <div class="box">
+                    <p class="smallTitle">ゴールデンエジプト</p>
+                    <ul>
+                        <li>
+                            ベット時間
+                            <p>2022-08-16 10:28:48</p>
+                        </li>
+                        <li>
+                            ベット番号
+                            <p>11678681</p>
+                        </li>
+                        <li>
+                            ベット金額
+                            <p>¥10.50</p>
+                        </li>
+                        <li>
+                            有効ベット額
+                            <p>¥10.50</p>
+                        </li>
+                        <li>
+                            チップ
+                            <p>¥0.00</p>
+                        </li>
+                        <li>
+                            結果
+                            <p class="money">¥-10.50</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <p class="smallTitle">ゴールデンエジプト</p>
+                    <ul>
+                        <li>
+                            ベット時間
+                            <p>2022-08-16 10:28:48</p>
+                        </li>
+                        <li>
+                            ベット番号
+                            <p>11678681</p>
+                        </li>
+                        <li>
+                            ベット金額
+                            <p>¥10.50</p>
+                        </li>
+                        <li>
+                            有効ベット額
+                            <p>¥10.50</p>
+                        </li>
+                        <li>
+                            チップ
+                            <p>¥0.00</p>
+                        </li>
+                        <li>
+                            結果
+                            <p class="money">¥-10.50</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
