--- a/html/card.html
+++ b/html/card.html
@@ -156,7 +156,7 @@
                             <p class="remind">2回入力する口座番号は同じである必要があります</p>
                         </li>
                     </ol>
-                    <button>検索</button>
+                    <button class="checkBtn">検索</button>
                 </ul>
             </div>
         </div>
@@ -185,21 +185,25 @@
     <div class="filter">
         <div class="jumpWindow plsGo">
             <div class="title">
-                ヒント
+                <p>ヒント</p>
                 <i class="close"></i>
             </div>
             <div class="content">
-                <p>先にログインください</p>
-                <button class="close">確認</button>
+                <p>
+                    情報をバインドするには、
+                    <br>
+                    個人ページに移動してください
+                </p>
+                <button class="openBtn">確認</button>
             </div>
         </div>
         <div class="jumpWindow plsGo2">
             <div class="title">
-                ヒント
+                <p>ヒント</p>
                 <i class="close"></i>
             </div>
             <div class="content">
-                <p>レビュー中</p>
+                <p>レビュー中の既存データ</p>
                 <button class="close">確認</button>
             </div>
         </div>
