--- a/html/dealRecord_water.html
+++ b/html/dealRecord_water.html
@@ -67,8 +67,8 @@
                             <p>2022-07-30 12:35:20</p>
                         </li>
                         <li class="btnBox">
-                            <button>買い戻すを見る</button>
-                            <button>ベットスリップを見る</button>
+                            <button class="openBuy">買い戻すを見る</button>
+                            <button class="openRecord">ベットスリップを見る</button>
                         </li>
                     </ul>
                 </div>
@@ -102,8 +102,8 @@
                             <p>2022-07-30 12:35:20</p>
                         </li>
                         <li class="btnBox">
-                            <button disabled>買い戻すを見る</button>
-                            <button disabled>ベットスリップを見る</button>
+                            <button class="openBuy" disabled>買い戻すを見る</button>
+                            <button class="openRecord" disabled>ベットスリップを見る</button>
                         </li>
                     </ul>
                 </div>
@@ -137,8 +137,8 @@
                             <p>2022-07-30 12:35:20</p>
                         </li>
                         <li class="btnBox">
-                            <button>買い戻すを見る</button>
-                            <button>ベットスリップを見る</button>
+                            <button class="openBuy">買い戻すを見る</button>
+                            <button class="openRecord">ベットスリップを見る</button>
                         </li>
                     </ul>
                 </div>
@@ -166,6 +166,180 @@
         </ul>
     </footer>
     <!--彈窗-->
-    <div class="filter"></div>
+    <div class="filter">
+        <!--回補明細-->
+        <div class="jumpWindow waterWindow_1">
+            <div class="title sp">
+                <p>買い戻す明細</p>
+                <p class="smallTitle">番号 165908968842662</p>
+                <i class="close"></i>
+            </div>
+            <div class="content">
+                <div class="box">
+                    <p class="smallTitle">11678613</p>
+                    <ul>
+                        <li>
+                            ステータス
+                            <p>買い戻すを見る</p>
+                        </li>
+                        <li>
+                            ベット
+                            <p class="money">¥10.50</p>
+                        </li>
+                        <li>
+                            日付
+                            <p>2022-08-16 10:30:58</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <p class="smallTitle">11678613</p>
+                    <ul>
+                        <li>
+                            ステータス
+                            <p>買い戻すを見る</p>
+                        </li>
+                        <li>
+                            ベット
+                            <p class="money">¥10.50</p>
+                        </li>
+                        <li>
+                            日付
+                            <p>2022-08-16 10:30:58</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <p class="smallTitle">11678613</p>
+                    <ul>
+                        <li>
+                            ステータス
+                            <p>買い戻すを見る</p>
+                        </li>
+                        <li>
+                            ベット
+                            <p class="money">¥10.50</p>
+                        </li>
+                        <li>
+                            日付
+                            <p>2022-08-16 10:30:58</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <p class="smallTitle">11678613</p>
+                    <ul>
+                        <li>
+                            ステータス
+                            <p>買い戻すを見る</p>
+                        </li>
+                        <li>
+                            ベット
+                            <p class="money">¥10.50</p>
+                        </li>
+                        <li>
+                            日付
+                            <p>2022-08-16 10:30:58</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <p class="smallTitle">11678613</p>
+                    <ul>
+                        <li>
+                            ステータス
+                            <p>買い戻すを見る</p>
+                        </li>
+                        <li>
+                            ベット
+                            <p class="money">¥10.50</p>
+                        </li>
+                        <li>
+                            日付
+                            <p>2022-08-16 10:30:58</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <p class="smallTitle">11678613</p>
+                    <ul>
+                        <li>
+                            ステータス
+                            <p>買い戻すを見る</p>
+                        </li>
+                        <li>
+                            ベット
+                            <p class="money">¥10.50</p>
+                        </li>
+                        <li>
+                            日付
+                            <p>2022-08-16 10:30:58</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!--注單明細-->
+        <div class="jumpWindow waterWindow_2">
+            <div class="title sp">
+                <p>ベットスリップ明細</p>
+                <p class="smallTitle">番号 165908968842662</p>
+                <i class="close"></i>
+            </div>
+            <div class="content">
+                <div class="box">
+                    <p class="smallTitle">11678613</p>
+                    <ul>
+                        <li>
+                            ゲーム会社
+                            <p>IFUN GAMES</p>
+                        </li>
+                        <li>
+                            金額
+                            <p class="money">¥10.50</p>
+                        </li>
+                        <li>
+                            日付
+                            <p>2022-08-16 10:30:58</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <p class="smallTitle">11678613</p>
+                    <ul>
+                        <li>
+                            ゲーム会社
+                            <p>IFUN GAMES</p>
+                        </li>
+                        <li>
+                            金額
+                            <p class="money">¥10.50</p>
+                        </li>
+                        <li>
+                            日付
+                            <p>2022-08-16 10:30:58</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <p class="smallTitle">11678613</p>
+                    <ul>
+                        <li>
+                            ゲーム会社
+                            <p>IFUN GAMES</p>
+                        </li>
+                        <li>
+                            金額
+                            <p class="money">¥10.50</p>
+                        </li>
+                        <li>
+                            日付
+                            <p>2022-08-16 10:30:58</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
