--- a/html/member.html
+++ b/html/member.html
@@ -128,21 +128,24 @@
     <div class="filter">
         <div class="jumpWindow langWindow">
             <div class="title">
+                <p>語言</p>
                 <i class="close"></i>
             </div>
             <ul>
-                <li class="active">日本語</li>
-                <li>繁體中文</li>
-                <li>简体中文</li>
+                <li class="active close">日本語</li>
+                <li class="close">繁體中文</li>
+                <li class="close">简体中文</li>
             </ul>
         </div>
         <div class="jumpWindow downloadBox">
             <div class="title">
-                フォローする
+                <p>フォローする</p>
                 <i class="close"></i>
             </div>
             <div class="box">
-                <div class="img"></div>
+                <div class="img twitter"></div>
+                <div class="img instergram"></div>
+                <div class="img baido"></div>
             </div>
         </div>
     </div>
