--- a/html/searchPoint.html
+++ b/html/searchPoint.html
@@ -60,7 +60,7 @@
                             2世代目
                             <i class="search_ic"></i>
                         </button>
-                        <button>
+                        <button class="pointBtn">
                             詳細を見る
                             <i class="dbarrow_ic"></i>
                         </button>
@@ -86,7 +86,7 @@
                             3世代目
                             <i class="search_ic"></i>
                         </button>
-                        <button disabled>
+                        <button class="pointBtn" disabled>
                             詳細を見る
                             <i class="dbarrow_ic"></i>
                         </button>
@@ -112,7 +112,7 @@
                             4世代目
                             <i class="search_ic"></i>
                         </button>
-                        <button>
+                        <button class="pointBtn">
                             詳細を見る
                             <i class="dbarrow_ic"></i>
                         </button>
@@ -160,32 +160,81 @@
         <!--查看詳情-->
         <div class="jumpWindow pointWindow">
             <div class="title">
-                N代會員 - 詳情
+                <p>2世代目-会員詳細</p>
                 <i class="close"></i>
             </div>
             <div class="content">
-                <ul>
-                    <li class="title">
-                        <p>會員帳號</p>
-                        <p>會員名稱</p>
-                    </li>
-                    <li>
-                        <p>ooxx08</p>
-                        <p>蚵仔煎</p>
-                    </li>
-                    <li>
-                        <p>lo0026</p>
-                        <p>Shado</p>
-                    </li>
-                    <li>
-                        <p>tete17</p>
-                        <p>停電</p>
-                    </li>
-                    <li>
-                        <p>sn77888</p>
-                        <p>-</p>
-                    </li>
-                </ul>
+                <table>
+                    <tr>
+                        <th>
+                            <p>アカウント</p>
+                        </th>
+                        <th>
+                            <p>有効ベット額</p>
+                        </th>
+                        <th>
+                            <p>
+                                ボーナス
+                                <br>
+                                推定金額
+                            </p>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>XX00o8</p>
+                        </td>
+                        <td>
+                            <p>100.00</p>
+                        </td>
+                        <td>
+                            <p>1.00</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>10058tt</p>
+                        </td>
+                        <td>
+                            <p>0.00</p>
+                        </td>
+                        <td>
+                            <p>0.00</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>tete17</p>
+                        </td>
+                        <td>
+                            <p>1200.00</p>
+                        </td>
+                        <td>
+                            <p>12.00</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>ssaaDD250</p>
+                        </td>
+                        <td>
+                            <p>222.00</p>
+                        </td>
+                        <td>
+                            <p>2.22</p>
+                        </td>
+                    </tr>
+                </table>
+                <div class="pageBox">
+                    <div class="line"></div>
+                    <i class="arrow_ic disable"></i>
+                    <p>
+                        <span>1</span>
+                    </p>
+                    <i class="arrow_ic"></i>
+                    <div class="line"></div>
+                </div>
+                <div class="pageText">総計 4 件</div>
             </div>
         </div>
     </div>
