--- a/html/withdrawal.html
+++ b/html/withdrawal.html
@@ -348,7 +348,9 @@
     <div class="filter">
         <!--loading-->
         <div class="jumpWindow loading">
-            <div class="title">ヒント</div>
+            <div class="title">
+                <p>ヒント</p>
+            </div>
             <div class="content">
                 <div class="img"></div>
                 <p>loading...</p>
