--- a/index.html
+++ b/index.html
@@ -90,7 +90,39 @@
                     <p>カードゲーム</p>
                 </li>
             </ul>
-            <ul class="downBox">
+            <ul class="downBox hot">
+                <li class="unLogin">
+                    <img src="./images/partner/slot/gameImg_1.png" alt="">
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/gameImg_2.png" alt="">
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/gameImg_3.png" alt="">
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/gameImg_4.png" alt="">
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/fish/gameImg_1.png" alt="">
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/fish/gameImg_2.png" alt="">
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/fish/gameImg_3.png" alt="">
+                </li>
+            </ul>
+            <ul class="downBox sport">
+                <li class="unLogin">
+                    <img src="./images/partner/sport/sport_36588.png" alt="">
+                    <div class="textBox">
+                        <p class="title">36588 Sports</p>
+                        <p class="sub">36588 スポーツ</p>
+                    </div>
+                </li>
+            </ul>
+            <ul class="downBox live display">
                 <li class="unLogin">
                     <img src="./images/partner/live/liveImg_1.png" alt="">
                     <div class="textBox">
@@ -105,32 +137,45 @@
                         <p class="sub">AG ライブ</p>
                     </div>
                 </li>
+            </ul>
+            <ul class="downBox slot">
                 <li class="unLogin">
-                    <img src="./images/partner/live/liveImg_1.png" alt="">
+                    <img src="./images/partner/slot/slot_ag.png" alt="">
                     <div class="textBox">
-                        <p class="title">SA 真人</p>
-                        <p class="sub">SA ライブ</p>
+                        <p class="title">AG SLOT</p>
+                        <p class="sub">AG スロット</p>
                     </div>
                 </li>
                 <li class="unLogin">
-                    <img src="./images/partner/live/liveImg_2.png" alt="">
+                    <img src="./images/partner/slot/slot_ifun.png" alt="">
                     <div class="textBox">
-                        <p class="title">AG 真人</p>
-                        <p class="sub">AG ライブ</p>
+                        <p class="title">iFUN SLOT</p>
+                        <p class="sub">iFUN スロット</p>
+                    </div>
+                </li>
+            </ul>
+            <ul class="downBox fish">
+                <li class="unLogin">
+                    <img src="./images/partner/fish/fish_rsg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">RSG</p>
+                        <p class="sub">AG 釣りゲーム</p>
+                    </div>
+                </li>
+            </ul>
+            <ul class="downBox board">
+                <li class="unLogin">
+                    <img src="./images/partner/board/board_ag.png" alt="">
+                    <div class="textBox">
+                        <p class="title">AG</p>
+                        <p class="sub">AG カードゲーム</p>
                     </div>
                 </li>
                 <li class="unLogin">
-                    <img src="./images/partner/live/liveImg_1.png" alt="">
+                    <img src="./images/partner/board/board_ifun.png" alt="">
                     <div class="textBox">
-                        <p class="title">SA 真人</p>
-                        <p class="sub">SA ライブ</p>
-                    </div>
-                </li>
-                <li class="unLogin">
-                    <img src="./images/partner/live/liveImg_2.png" alt="">
-                    <div class="textBox">
-                        <p class="title">AG 真人</p>
-                        <p class="sub">AG ライブ</p>
+                        <p class="title">iFUN</p>
+                        <p class="sub">iFUN カードゲーム</p>
                     </div>
                 </li>
             </ul>
@@ -199,7 +244,10 @@
                 <p>利用規約とプライバシーポリシー</p>
                 <i class="close"></i>
             </div>
-            <button class="allBtn">すべて展開</button>
+            <button class="allBtn">
+                すべて展開
+                <i class="dbarrow_ic"></i>
+            </button>
             <div class="box">
                 <div class="infoBox">
                     <ul>
