--- a/html/searchPoint_record.html
+++ b/html/searchPoint_record.html
@@ -99,38 +99,6 @@
         </ul>
     </footer>
     <!--彈窗-->
-    <div class="filter">
-        <!--查看詳情-->
-        <div class="jumpWindow pointWindow">
-            <div class="title">
-                N代會員 - 詳情
-                <i class="close"></i>
-            </div>
-            <div class="content">
-                <ul>
-                    <li class="title">
-                        <p>會員帳號</p>
-                        <p>會員名稱</p>
-                    </li>
-                    <li>
-                        <p>ooxx08</p>
-                        <p>蚵仔煎</p>
-                    </li>
-                    <li>
-                        <p>lo0026</p>
-                        <p>Shado</p>
-                    </li>
-                    <li>
-                        <p>tete17</p>
-                        <p>停電</p>
-                    </li>
-                    <li>
-                        <p>sn77888</p>
-                        <p>-</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+    <div class="filter"></div>
 </body>
 </html>
